2015-06-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c: Allow a tiny nano's ~/.nanorc to enable search and
	position histories.  Also sort the options more strictly.
	* src/nano.h: Delete two unused things, and add two comments.

2015-06-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_undo, add_undo): When undoing a Backspace at the tail
	of the file and nonewlines is not set, then don't add another newline
	but just reposition the cursor.  Also, when doing a Delete at the tail
	of the file, don't add a superfluous undo structure.  This prevents
	the appearance of an extra newline when undoing the Backspace/Delete.
	Patch partially by Mark Majeres.  The problem was first reported in
	https://lists.gnu.org/archive/html/nano-devel/2015-06/msg00003.html.
	* src/text.c (do_undo): Adjust whitespace after the previous change.
	* src/text.c (add_undo): Elide an unneeded variable and correct two
	comments.  And try to put the more frequent condition first.
	* src/text.c (add_undo): Rename the parameter 'current_action' to
	'action', to match the other functions.
	* src/text.c (do_undo, add_undo, update_undo): Improve the visibility
	of the undo-related debugging messages.

2015-06-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Add some debugging code to track which
	multidata codes (for multiline regexes) get assigned to which lines.
	* src/winio.c (edit_draw): Start and end regexes can be very similar;
	so if a found start has been qualified as an end earlier, believe it
	and skip to the next step.  This helps with Python's docstrings.
	* src/winio.c (edit_draw): When the whole line has been coloured,
	don't bother looking for any more starts.  This prevents some lines
	from being erroneously marked as CENDAFTER instead of CWHOLELINE.
	* src/*.c: Don't check for non-NULL before freeing; it's unneeded.

2015-06-11  Benno Schulenberg  <bensberg@justemail.net>